stealth (4.01.05)

  * Fixed typos reported by Lintian

  * Updated the overview of required software in 'required'

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 14 May 2016 14:16:00 +0530

stealth (4.01.04)

  * Streamlined the `build install' actions

  * Requiring icmake 8.00.05

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 24 Dec 2015 12:51:21 +0100

stealth (4.01.03)

  * Adapted build scripts to icmake 8.00.04

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 20 Dec 2015 11:56:40 +0100

stealth (4.01.02)

  * Kevin Brodsky observed that the installation scripts used 'chdir' rather
    than 'cd'. Fixed in this release.

  * Kevin Brodsky also observed that the combined size of all precompiled 
    headers might exceed some disks capacities. The option -P was added to the
    ./build script to prevent the use of precompiled headers.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 05 Oct 2015 21:18:02 +0200

stealth (4.01.01)

 * Standardized the (de)installation procedures

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 03 Oct 2015 18:26:05 +0200

stealth (4.01.00)

  * Added option --ping, verifying whether a stealth daemon is still
    available. See the man-page for details.

  * Updated the /usr/bin/stealthcron script, e.g., calling logger when stealth
    was restarted.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 07 Mar 2015 14:49:08 +0100

stealth (4.00.00)

  * Stealth 4.00.00 uses Unix Domain Sockets instead of signals to
    communicatie with the stealth monitor running as a daemon.

  * Previously required absolute file paths are no longer required. When
    relative file paths are used with the Stealth daemon or with Stealth doing
    an integrity scan as foreground process they are interpreted relatively to
    the current working directory, or (when specified in the policy file)
    relative to the USE BASE location. With Stealth running in IPC mode
    relative file paths are interpreted relative to the directory in which