@@ -1,3 +1,3 @@
 #define AUTHOR  "Frank B. Brokken (f.b.brokken@rug.nl)";
-#define VERSION "4.01.05"
-#define YEARS   "2005-2016"
+#define VERSION "4.01.06"
+#define YEARS   "2005-2017"
