@@ -1,3 +1,10 @@
+stealth (4.01.06)
+
+  * Implemented Svante Signell's (via Tony Mancill) patch to return the
+    current working directory (options/getcwd.cc).
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 19 Apr 2017 11:57:44 +0200
+
 stealth (4.01.05)
 
   * Fixed typos reported by Lintian
